# optstream

./: .gitignore  CHANGELOG.md  LICENSE  optstream.cabal
examples/: beforeDashes.hs  beforeDashes2.hs  demo.hs  io-style.hs  parseArgsWithHelp.hs  short.hs  withHelpIOPrime.hs  withSubHelp.hs  withSubHelpIO.hs  withVersionIO.hs
src/Options/: OptStream.hs
src/Options/OptStream/: Classes.hs  Help.hs  IOOps.hs  Internal.hs  Raw.hs
tests/: OptStreamTest.hs
tests/Options/OptStream/Test/: Helpers.hs  TestIO.hs
