cabal-version:       >=1.10

name:                optstream
version:             0.1.0.0
synopsis:            Command line parsing with twice-applicative substream parsers.
-- description:
homepage:            https://github.com/danshved/optstream
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Dan Shved <danshved@gmail.com>
maintainer:          danshved@gmail.com
copyright:           (c) 2022 Dan Shved
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Options.OptStream,
                       Options.OptStream.Classes,
                       Options.OptStream.Raw,
                       Options.OptStream.Help,
                       Options.OptStream.IOOps
  other-modules:       Options.OptStream.Internal
  -- other-extensions:
  build-depends:       base >= 4.12.0 && < 4.16
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite optstream-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             OptStreamTest.hs
  other-modules:       Options.OptStream.Test.Helpers,
                       Options.OptStream.Test.TestIO
  build-depends:       base,
                       optstream,
                       QuickCheck >=2.2,
                       test-framework,
                       test-framework-quickcheck2

-- TODO: version
-- TODO: description
-- TODO: category
-- TODO: bug reports
-- TODO: versions of dependencies (both upper and lower bounds), including the test suite (?).
-- TODO: try even newer GHC than 9.0.1, probably with Nix
